--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -1,28 +1,28 @@
-name: Run Tests on Push  # Workflow name
+name: Run Tests on Push  
 
-on: [push]  # Triggers when code is pushed to any branch
+on: [push]  
 
 jobs:
-  test:  # Job ID (you can have multiple jobs)
-    runs-on: ubuntu-latest  # Runs in a Linux VM
+  test:  
+    runs-on: ubuntu-latest  
 
     steps:
-      # Step 1: Check out your code
+      
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # Step 2: Set up Python
+      
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      # Step 3: Install dependencies
+      
       - name: Install dependencies
         run: |
           pip install pytest pandas
 
-      # Step 4: Run pytest
+      
       - name: Run tests
         run: |
           python -m pytest tests/ -v
